# Ariadne

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-COMMERCIAL.md  LICENSE-MIT  README.md  SECURITY.md  ariadne-fitness.toml  clippy.toml  cog.toml  deny.toml  dist-workspace.toml  install.sh  lefthook.yml  remote-install.sh  rust-toolchain.toml  rustfmt.toml
ariadne-cli/: Cargo.toml
ariadne-cli/src/: main.rs
crates/ariadne-cli/: Cargo.toml
crates/ariadne-cli/fixtures/astro/: App.astro  Child.astro  package.json
crates/ariadne-cli/fixtures/c/: caller.c
crates/ariadne-cli/fixtures/csharp/: Callee.cs  Caller.cs
crates/ariadne-cli/fixtures/go/: callee.go  caller.go
crates/ariadne-cli/fixtures/java/: Callee.java  Caller.java
crates/ariadne-cli/fixtures/python/: caller.py
crates/ariadne-cli/fixtures/react/: App.tsx  package.json
crates/ariadne-cli/fixtures/rust/: caller.rs
crates/ariadne-cli/fixtures/svelte/: App.svelte  Child.svelte  package.json
crates/ariadne-cli/fixtures/typescript/: caller.ts
crates/ariadne-cli/fixtures/vue/: App.vue  Child.vue  package.json
crates/ariadne-cli/src/: config.rs  errors.rs  main.rs
crates/ariadne-cli/src/adapters/: daemon_client.rs  mod.rs
crates/ariadne-cli/src/commands/: affected_tests.rs  api_diff.rs  daemon.rs  digest.rs  doc.rs  fitness.rs  index.rs  init.rs  mem.rs  mod.rs  (+6 more)
crates/ariadne-cli/tests/: advisory.rs  affected_tests.rs  digest.rs  doc_command.rs  fitness.rs  incremental_history.rs  index_frameworks.rs  index_parity.rs  outline_cli.rs  query.rs  scip_default_on.rs  setup.rs  smoke.rs
crates/ariadne-core/: Cargo.toml
crates/ariadne-core/benches/: ids.rs
crates/ariadne-core/src/: errors.rs  lib.rs
crates/ariadne-core/tests/: ids.rs  tags.rs
crates/ariadne-daemon/: Cargo.toml
crates/ariadne-daemon/benches/: warm_query.rs
crates/ariadne-daemon/src/: errors.rs  lib.rs
crates/ariadne-daemon/tests/: daemon.rs  incremental_warm.rs  live_update.rs  memory_probe.rs  scip_pass.rs  support.rs  warm_analytics.rs  warm_graph.rs
crates/ariadne-e2e/: Cargo.toml
crates/ariadne-e2e/fixtures/: adoption_questions.txt  repos.toml
crates/ariadne-e2e/src/: errors.rs  lib.rs
crates/ariadne-e2e/tests/: adoption_harness.rs  adoption_wiring.rs  affected_tests.rs  api_diff.rs  cli_daemon_parity.rs  mcp_session.rs  outline_token_delta.rs  search_read_spike.rs  slo.rs  smoke.rs
crates/ariadne-git/: Cargo.toml
crates/ariadne-git/src/: errors.rs  lib.rs
crates/ariadne-git/tests/: diff.rs  history.rs  incremental.rs  line_hunks.rs
crates/ariadne-graph/: Cargo.toml
crates/ariadne-graph/benches/: blast.rs
crates/ariadne-graph/src/: api_surface.rs  blast.rs  build.rs  co_change.rs  coupling.rs  cycles.rs  dead.rs  diagram.rs  diff_blast.rs  doc_model.rs  docgen.rs  docgen_insights.rs  economy.rs  errors.rs  fitness.rs  heuristics.rs  hotspot.rs  lib.rs  outline.rs  plan_assist.rs  refactor.rs  roots.rs  span_lines.rs  symbol_churn.rs  test_impact.rs
crates/ariadne-graph/tests/: co_change.rs  component_graph.rs  dead_code_roots.rs  diagram.rs  diff_blast.rs  doc_scope.rs  docgen_fixture.rs  docgen_module.rs  docgen_project.rs  golden_repo.rs  hotspot.rs  outline.rs  refactor_cases.rs  smoke.rs  support.rs  symbol_churn.rs  synthetic.rs
crates/ariadne-mcp/: Cargo.toml
crates/ariadne-mcp/benches/: cold_start.rs  concurrent.rs  search_latency.rs
crates/ariadne-mcp/src/: catalog.rs  errors.rs  lib.rs  serve.rs  server.rs  types.rs
crates/ariadne-mcp/tests/: catalog_projection.rs  daemon_client.rs  economy_token_delta.rs  handshake.rs  lazy_catalog.rs  shutdown.rs  smoke.rs  support.rs  tools_affected_tests.rs  tools_blast_radius.rs  tools_co_change.rs  tools_complexity.rs  tools_component_graph.rs  tools_coupling_report.rs  tools_diff_blast.rs  tools_doc.rs  tools_doc_for.rs  tools_file_summary.rs  tools_find_definition.rs  tools_find_references.rs  tools_fitness_report.rs  tools_hotspots.rs  tools_list_symbols.rs  tools_plan_assist.rs  tools_project_status.rs  tools_read_outline.rs  tools_read_symbol.rs  tools_refactor.rs  tools_search_code.rs  tools_weak_spots.rs
crates/ariadne-parser/: Cargo.toml
crates/ariadne-parser/benches/: parse.rs
crates/ariadne-parser/src/: errors.rs  lib.rs
crates/ariadne-parser/tests/: call_shape.rs  complexity.rs  facts_astro.rs  facts_c.rs  facts_cpp.rs  facts_csharp.rs  facts_go.rs  facts_java.rs  facts_javascript.rs  facts_jsx.rs  facts_kotlin.rs  facts_python.rs  facts_rust.rs  facts_svelte.rs  facts_tsx.rs  facts_typescript.rs  facts_vue.rs  incremental.rs  incremental_svelte.rs  incremental_vue.rs  real_world.rs  smoke.rs
crates/ariadne-salsa/: Cargo.toml
crates/ariadne-salsa/benches/: edit.rs
crates/ariadne-salsa/src/: db.rs  derive.rs  derived.rs  errors.rs  inputs.rs  lib.rs  memory.rs
crates/ariadne-salsa/tests/: derivation.rs  durability.rs  equivalence.rs  incremental.rs  scip_edges.rs  scoped_resolution.rs  smoke.rs
crates/ariadne-scip/: Cargo.toml  README.md  build.rs
crates/ariadne-scip/proto/: SCIP_COMMIT
crates/ariadne-scip/src/: errors.rs  facts.rs  lib.rs  proto.rs
crates/ariadne-scip/tests/: extract_facts.rs  ingest_astro.rs  ingest_clang.rs  ingest_csharp.rs  ingest_go.rs  ingest_java.rs  ingest_plan.rs  ingest_python.rs  ingest_react.rs  ingest_rust.rs  ingest_svelte.rs  ingest_typescript.rs  ingest_vue.rs  normalize.rs  roundtrip.rs  smoke.rs
crates/ariadne-storage/: Cargo.toml
crates/ariadne-storage/benches/: apply.rs
crates/ariadne-storage/fixtures/: schema-v1.redb  schema-v2.redb  schema-v6.redb
crates/ariadne-storage/src/: errors.rs  lib.rs
crates/ariadne-storage/tests/: changeset.rs  history.rs  history_merge.rs  migration.rs  mvcc.rs  roundtrip.rs  smoke.rs  support.rs  symbol_churn.rs
crates/ariadne-watcher/: Cargo.toml
crates/ariadne-watcher/benches/: sink.rs
crates/ariadne-watcher/src/: errors.rs  lib.rs
crates/ariadne-watcher/tests/: events.rs  file_id_cache.rs  ignore.proptest-regressions  ignore.rs  reconcile.rs  smoke.rs
(+1000 files in other folders)
