[package]
name = "ariadne-graph"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Structural dependency graph engine for source code"

[[bin]]
name = "ariadne"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.24"
tree-sitter-typescript = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-go = "0.23"
tree-sitter-python = "0.23"
tree-sitter-rust = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-java = "0.23"
tree-sitter-md = "0.3"
tree-sitter-json = "0.24"
tree-sitter-yaml = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
ignore = "0.4"
rayon = "1"
thiserror = "2"
dunce = "1"
time = { version = "0.3", features = ["formatting"] }
glob = "0.3"
roxmltree = "0.21"

# MCP server dependencies (optional, behind "serve" feature)
rmcp = { version = "1.2", features = ["server", "transport-io"], optional = true }
schemars = { version = "1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"], optional = true }
tokio-util = { version = "0.7", optional = true }
arc-swap = { version = "1", optional = true }
notify = { version = "8", optional = true }
notify-debouncer-full = { version = "0.7", optional = true }

[features]
default = ["serve"]
serve = ["rmcp", "tokio", "tokio-util", "arc-swap", "notify", "notify-debouncer-full", "schemars"]

[dev-dependencies]
insta = { version = "1", features = ["yaml"] }
tempfile = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }
serde_json = "1"

[[bench]]
name = "build_bench"
harness = false

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "algo_bench"
harness = false

[[bench]]
name = "mcp_bench"
harness = false

[[bench]]
name = "analysis_bench"
harness = false

[[bench]]
name = "symbol_bench"
harness = false
