# Workspace root.
#
# Hybrid layout: this file declares both `[workspace]` (the 10 ariadne-*
# member crates under crates/) and `[package]` (a stub root package named
# `ariadne-workspace`). The root package exists solely to own
# `tests/architecture.rs` — the hexagonal-boundary invariant scaffolded in
# tier-00 [src: tests/architecture.rs] [src: docs/folder-layout.md].
#
# Shared metadata + dependency + lint pins live in `[workspace.package]`,
# `[workspace.dependencies]`, and `[workspace.lints]`; members inherit via
# `*.workspace = true`. [src: https://doc.rust-lang.org/cargo/reference/workspaces.html]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Ariadne contributors"]
repository = "https://github.com/mind-decay/ariadne"
publish = false

[workspace.dependencies]
# Intra-workspace path deps. Adapters import only `ariadne-core`; the
# salsa/graph use-case crates additionally import `ariadne-storage`. The
# architecture invariant (tests/architecture.rs) policies these edges.
ariadne-core = { path = "crates/ariadne-core" }
ariadne-storage = { path = "crates/ariadne-storage" }
ariadne-salsa = { path = "crates/ariadne-salsa" }
ariadne-graph = { path = "crates/ariadne-graph" }

# Runtime
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
parking_lot = "0.12"
# Incremental query DB (tier-04). Pin exact; bumps via ADR.
# salsa 0.26.2 published 2026-05-03 [src: https://crates.io/crates/salsa/versions].
salsa = "=0.26.2"

# SCIP ingestion (tier-05). prost 0.14.3 is the current stable;
# protoc-bin-vendored 3.2 ships protoc bytes so build.rs never needs a
# system `protoc` [src: https://crates.io/crates/prost,
# https://crates.io/crates/protoc-bin-vendored].
prost = "0.14"
prost-types = "0.14"
prost-build = "0.14"
protoc-bin-vendored = "3"
# Stable symbol IDs (tier-05 normalize.rs): blake3 truncated to 64 bits.
blake3 = "1"
# Data-parallel driver fan-out (tier-05 IngestPlan). Pure Rust, no cgo.
rayon = "1"

# Graph analytics (tier-07). petgraph 0.8 is the current stable; ships
# StableDiGraph + tarjan_scc + dominators::simple_fast [src:
# https://docs.rs/petgraph/latest, https://crates.io/crates/petgraph].
# bitflags 2.x for EdgeKindSet filter sets; fxhash for FxHashMap node
# index; smallvec for compact predecessor lists in dominator output.
petgraph = "0.8"
bitflags = "2"
fxhash = "0.2"
smallvec = "1"

# File-system watcher (tier-06). notify 8.2.0 is the current stable line;
# notify-debouncer-full 0.7.0 wraps it with rename-pair coalescing + a
# quiet period and pulls notify v8.2 transitively
# [src: `cargo info notify-debouncer-full`, https://docs.rs/notify-debouncer-full/0.7.0].
# ignore 0.4 provides .gitignore / .ariadneignore semantics
# [src: https://docs.rs/ignore].
notify = "8.2"
notify-debouncer-full = "0.7"
ignore = "0.4"

# Test + bench (consumed via dev-dependencies in members)
proptest = "1"
insta = "1"
rstest = "0.23"
criterion = "0.5"
tempfile = "3"
pretty_assertions = "1"

# Workspace introspection (root architecture test only)
cargo_metadata = "0.20"

[profile.bench]
# Enable thin LTO for benches so the tree-sitter C runtime can be inlined
# across crate boundaries. Cuts cold-parse cost on tier-03 by ~25% in our
# measurements [src: tier-03 build session 2026-05-19].
lto = "thin"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }

# ---- Root package: workspace-architecture test harness -------------------
[package]
name = "ariadne-workspace"
description = "Workspace root harness for ariadne. Holds tests/architecture.rs."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
name = "ariadne_workspace"
path = "src/_root.rs"

[[test]]
name = "architecture"
path = "tests/architecture.rs"

[dev-dependencies]
cargo_metadata = { workspace = true }

[lints]
workspace = true
