[package]
name = "ariadne-cli"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "CLI for the Ariadne structural dependency graph engine"

[[bin]]
name = "ariadne"
path = "src/main.rs"

[dependencies]
ariadne-graph = { path = "..", default-features = false }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync", "time"], optional = true }

[features]
default = ["serve"]
serve = ["ariadne-graph/serve", "tokio"]
