[package]
name = "ariadne-cli"
description = "Driving adapter: command-line entrypoint for Ariadne."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "ariadne"
path = "src/main.rs"

[dependencies]
ariadne-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
