[package]
name = "ariadne-core"
description = "Domain interior for Ariadne: stable IDs, value objects, and port traits."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
criterion = { workspace = true }
pretty_assertions = { workspace = true }

[[bench]]
name = "ids"
harness = false
