[package]
name = "ariadne-daemon"
description = "Driving adapter: long-running daemon host with interprocess local-socket IPC."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
# Warm-mode composition root (ADR-0007/0015): the daemon opens storage and
# builds the in-RAM analytics graph, so it wires the read-side use-case +
# driven adapters. It is itself a driving adapter, so nothing in the
# workspace depends on it (tests/architecture.rs).
# tier-08 wires the live update pipeline here: the daemon owns the salsa
# re-derivation driver (`ariadne-salsa`), parses changed files at this
# composition root (`ariadne-parser`, a driven adapter — allowed), and hashes
# their bytes (`blake3`) to build the `FileRecord` exactly as the cold index
# does. It deliberately does NOT depend on `ariadne-watcher`: that is a sibling
# driving adapter, barred by the hexagonal invariant (tests/architecture.rs);
# the CLI composition root wires the watcher to `serve_live` over the
# `ariadne_core::Invalidation` channel instead [src: build_notes; ADR-0007].
ariadne-core = { workspace = true }
ariadne-graph = { workspace = true }
ariadne-storage = { workspace = true }
ariadne-salsa = { workspace = true }
ariadne-parser = { path = "../ariadne-parser" }
blake3 = { workspace = true }
thiserror = { workspace = true }
# Cross-platform local-socket IPC (Unix domain socket / Windows named pipe
# behind one API). Pinned exact per the post-v1 tech inventory + RD5
# [src: .claude/plans/post-v1-roadmap/plan.md RD5;
#  https://docs.rs/interprocess/2.4.2/interprocess/local_socket/index.html].
interprocess = "=2.4.2"
# Non-self-describing wire codec for the framed IPC payloads. Same exact pin
# as `ariadne-storage`; postcard is the approved codec in the plan tech
# inventory [src: post-v1-roadmap plan.md `<tech_inventory>`;
#  https://postcard.jamesmunns.com/wire-format].
postcard = { version = "=1.1.3", features = ["use-std"] }

[dev-dependencies]
tempfile = { workspace = true }
# blake3 is already a normal dep (file-record hashing); the scip-pass test reuses
# it to compute the D4 coverage hash for synthetic `ScipFacts`, so the warm graph
# accepts them as covered (scip-driven-edges tier-04). Not a new external dep.
blake3 = { workspace = true }
# Random edit-sequence generator for the warm-graph divergence-0 proptest
# (tier-08 step 6) [src: post-v1-roadmap plan.md `<verification>`].
proptest = { workspace = true }
# Warm-query criterion bench harness (tier-10 step 4) [src: workspace pin].
# The bench seeds redb directly via the already-normal `ariadne-storage` dep.
criterion = { workspace = true }

# Criterion warm-query SLO bench: p95 < 10 ms over direct daemon IPC against a
# warm graph (tier-10 step 4, exit criterion #2).
[[bench]]
name = "warm_query"
harness = false
