[package]
name = "ariadne-e2e"
description = "End-to-end harness: real OSS repos against the full Ariadne stack."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
ariadne-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
