[package]
name = "ariadne-e2e"
description = "End-to-end harness: real OSS repos against the full Ariadne stack."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
ariadne-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# `fixtures/repos.toml` decode [src: https://docs.rs/toml].
toml = "0.9"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
# tier-06 search/read spike (throwaway harness). `ariadne-storage` is a driven
# adapter — a dev-edge from `ariadne-e2e` is architecture-legal; `ariadne-mcp`
# (driving) is never linked [src: tests/architecture.rs:40-45,126-139].
ariadne-storage = { workspace = true }
# Symbol-name regex search arm; already in Cargo.lock via `ignore`
# [src: Cargo.lock regex 1.12.3].
regex = "1.12.3"

# Per-language suites live under tests/repos/ and are declared explicitly —
# cargo only auto-discovers test files directly under tests/.
[[test]]
name = "repos_rust"
path = "tests/repos/rust.rs"

[[test]]
name = "repos_typescript"
path = "tests/repos/typescript.rs"

[[test]]
name = "repos_python"
path = "tests/repos/python.rs"

[[test]]
name = "repos_go"
path = "tests/repos/go.rs"

[[test]]
name = "repos_java"
path = "tests/repos/java.rs"

[[test]]
name = "repos_csharp"
path = "tests/repos/csharp.rs"

[[test]]
name = "repos_c"
path = "tests/repos/c.rs"

[[test]]
name = "repos_cpp"
path = "tests/repos/cpp.rs"

# JS-framework component-graph suites — tier-09.
[[test]]
name = "repos_react"
path = "tests/repos/react.rs"

[[test]]
name = "repos_vue"
path = "tests/repos/vue.rs"

[[test]]
name = "repos_svelte"
path = "tests/repos/svelte.rs"

[[test]]
name = "repos_astro"
path = "tests/repos/astro.rs"
