[package]
name = "ariadne-graph"
description = "Use case: graph analytics (blast-radius, coupling, SCC, dominators)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
ariadne-core = { workspace = true }
ariadne-storage = { workspace = true }
thiserror = { workspace = true }
