[package]
name = "ariadne-graph"
description = "Use case: graph analytics (blast-radius, coupling, SCC, dominators)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
ariadne-core = { workspace = true }
thiserror = { workspace = true }
# Tier-07 analytics: in-RAM graph + algorithms.
# [src: .claude/plans/ariadne-core/tier-07-graph-analytics.md <files>].
petgraph = { workspace = true }
bitflags = { workspace = true }
fxhash = { workspace = true }
smallvec = { workspace = true }
rayon = { workspace = true }
# Span-builder validity guard (tier-15c D3): `spans_from` hashes a changed
# file's on-disk bytes against its indexed `blake3` so stale byte offsets never
# seed a wrong symbol. Same codec the indexer keys symbols with.
blake3 = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }
criterion = { workspace = true }
pretty_assertions = { workspace = true }

[[bench]]
name = "blast"
harness = false
