[package]
name = "ariadne-mcp"
description = "Driving adapter: MCP stdio server exposing Ariadne to Claude."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "ariadne-mcp"
path = "src/bin/ariadne-mcp.rs"

[dependencies]
ariadne-core = { workspace = true }
ariadne-storage = { workspace = true }
ariadne-salsa = { workspace = true }
ariadne-graph = { workspace = true }
# Git-history driven adapter (tier-15c D1): the MCP server computes the live
# `DiffSpec` diff for `diff_blast_radius` in-process, where `ariadne-git` is
# linked. The daemon never links it — it receives the pre-computed hunks over
# the wire — so RD7 holds (ADR-0023). `ariadne-git` itself stays deps ⊆ {core},
# so the architecture invariant is preserved [src: docs/adr/0023-mcp-git-diff-dependency.md].
ariadne-git = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
# Pinned to ride the mcp-rs 1.7 protocol surface; bumps require an ADR
# (R5 in plan.md `<risks>`).
# [src: https://crates.io/api/v1/crates/rmcp/versions — 1.7.0 published 2026-05-13].
rmcp = { version = "=1.7.0", default-features = false, features = ["server", "macros", "transport-io"] }
# rmcp's `server` feature already pulls schemars; depend on it explicitly so
# `#[derive(schemars::JsonSchema)]` calls compile in this crate.
schemars = "1"
# `transport-io` requires the multi-thread runtime + macros + io-std.
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "io-std", "signal", "sync"] }
# Daemon-client transport (RD6): the MCP server forwards each query to the warm
# daemon over the same `interprocess` local socket the daemon hosts, framed with
# the same length-prefixed postcard codec. Exact pins mirror `ariadne-daemon`
# (ADR-0015) so client and server stay wire-compatible
# [src: docs/adr/0015-daemon-mode-ipc.md; .claude/plans/post-v1-roadmap/plan.md RD5/RD6].
interprocess = "=2.4.2"
postcard = { version = "=1.1.3", features = ["use-std"] }

[dev-dependencies]
ariadne-core = { workspace = true }
ariadne-storage = { workspace = true }
rmcp = { version = "=1.7.0", default-features = false, features = ["client", "transport-child-process", "macros"] }
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "process", "time", "io-util"] }
serde_json = { workspace = true }
insta = { workspace = true }
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
# The tier-15c diff-blast golden seeds an index whose file `blake3` must match
# the on-disk worktree bytes (the span-builder validity guard), so it hashes the
# fixture content with the same codec the indexer uses.
blake3 = { workspace = true }

[[bench]]
name = "concurrent"
harness = false

[[bench]]
name = "cold_start"
harness = false
