[package]
name = "ariadne-parser"
description = "Driven adapter: tree-sitter Parser port implementation."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lints]
workspace = true

[dependencies]
ariadne-core = { workspace = true }
thiserror = { workspace = true }
